examples/test/testpolicy11098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11098
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key0: value1
      key48: value22
      key26: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value18
      podSelector:
        matchLabels:
          key44: value5
          key37: value39
